--- a/world/ruby-sass-embedded/.artixlinux/pkgbase.yaml
+++ b/world/ruby-sass-embedded/.artixlinux/pkgbase.yaml
@@ -1,55 +1,60 @@
 ---
 team: world
-pkgbase:
-  name: ruby-sass-embedded
-  version: 1.86.1-2
-  arch:
-    - any
-  pkgname:
-    - ruby-sass-embedded
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 1.86.1-2
+    version: 1.87.0-1
     packages:
-      - ruby-sass-embedded-1.86.1-2-any.pkg.tar.zst
+      - ruby-sass-embedded-1.87.0-1-any.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
