--- a/world/marble/.artixlinux/pkgbase.yaml
+++ b/world/marble/.artixlinux/pkgbase.yaml
@@ -1,63 +1,64 @@
 ---
-pkgbase:
-  name: marble
-  version: 25.04.0-2
-  arch:
-    - x86_64
-  pkgname:
-    - marble
-    - marble-behaim
-    - marble-common
-    - marble-maps
-    - marble-qt
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 25.04.0-2
+    version: 25.04.1-1
     packages:
-      - marble-25.04.0-2-x86_64.pkg.tar.zst
-      - marble-behaim-25.04.0-2-x86_64.pkg.tar.zst
-      - marble-common-25.04.0-2-x86_64.pkg.tar.zst
-      - marble-maps-25.04.0-2-x86_64.pkg.tar.zst
-      - marble-qt-25.04.0-2-x86_64.pkg.tar.zst
+      - marble-25.04.1-1-x86_64.pkg.tar.zst
+      - marble-behaim-25.04.1-1-x86_64.pkg.tar.zst
+      - marble-common-25.04.1-1-x86_64.pkg.tar.zst
+      - marble-maps-25.04.1-1-x86_64.pkg.tar.zst
+      - marble-qt-25.04.1-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
