--- a/world/marble/PKGBUILD
+++ b/world/marble/PKGBUILD
@@ -1,5 +1,6 @@
-# Maintainer: Antonio Rojas <arojas@archlinux.org>
-# Maintainer: Felix Yan <felixonmars@archlinux.org>
+# Maintainer: Cory Sanin <corysanin@artixlinux.org>
+# Contributor: Antonio Rojas <arojas@archlinux.org>
+# Contributor: Felix Yan <felixonmars@archlinux.org>
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 # Contributor: Gustavo Alvarez <sl1pkn07@gmail.com>
 # Contributor: Balló György <ballogyor+arch at gmail dot com>
@@ -10,8 +11,8 @@ pkgname=(marble
          marble-common
          marble-maps
          marble-qt)
-pkgver=25.04.0
-pkgrel=2
+pkgver=25.04.1
+pkgrel=1
 pkgdesc='Desktop Globe'
 arch=(x86_64)
 url='https://apps.kde.org/marble/'
@@ -31,7 +32,7 @@ makedepends=(extra-cmake-modules
              qt6-webengine
              shapelib)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgbase-$pkgver.tar.xz{,.sig})
-sha256sums=('27bdf174215a66136795ef3d0a7a2f3e09d21b12d2c83ec3309d84389dd52909'
+sha256sums=('6d2469827644f728f9fc9a023388a66813f819687d15fd2c9392d8323e37f0e2'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
