--- a/world/massif-visualizer/.artixlinux/pkgbase.yaml
+++ b/world/massif-visualizer/.artixlinux/pkgbase.yaml
@@ -1,12 +1,5 @@
 ---
 team: world
-pkgbase:
-  name: massif-visualizer
-  version: 25.04.0-1
-  arch:
-    - x86_64
-  pkgname:
-    - massif-visualizer
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -19,40 +12,52 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 25.04.0-1
+    version: 25.04.1-1
     packages:
-      - massif-visualizer-25.04.0-1-x86_64.pkg.tar.zst
+      - massif-visualizer-25.04.1-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
   null-gremlins:
     version: 24.08.0-1
     packages:
