--- a/lib32/lib32-ocl-icd/.artixlinux/pkgbase.yaml
+++ b/lib32/lib32-ocl-icd/.artixlinux/pkgbase.yaml
@@ -1,11 +1,4 @@
 ---
-pkgbase:
-  name: lib32-ocl-icd
-  version: 2.3.2-2
-  arch:
-    - x86_64
-  pkgname:
-    - lib32-ocl-icd
 actions:
   addRepo: lib32
   removeRepo: null
@@ -18,38 +11,50 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
-    version: 2.3.2-2
+    version: 2.3.3-1
     packages:
-      - lib32-ocl-icd-2.3.2-2-x86_64.pkg.tar.zst
+      - lib32-ocl-icd-2.3.3-1-x86_64.pkg.tar.zst
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: lib32
