--- a/world/aws-crt-cpp/.artixlinux/pkgbase.yaml
+++ b/world/aws-crt-cpp/.artixlinux/pkgbase.yaml
@@ -1,12 +1,5 @@
 ---
 team: world
-pkgbase:
-  name: aws-crt-cpp
-  version: 0.32.4-1
-  arch:
-    - x86_64
-  pkgname:
-    - aws-crt-cpp
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -19,37 +12,49 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 0.32.4-1
+    version: 0.32.5-1
     packages:
-      - aws-crt-cpp-0.32.4-1-x86_64.pkg.tar.zst
+      - aws-crt-cpp-0.32.5-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
