--- a/world/aws-sdk-cpp/.artixlinux/pkgbase.yaml
+++ b/world/aws-sdk-cpp/.artixlinux/pkgbase.yaml
@@ -1,18 +1,5 @@
 ---
 team: world
-pkgbase:
-  name: aws-sdk-cpp
-  version: 1.11.555-1
-  arch:
-    - x86_64
-  pkgname:
-    - aws-sdk-cpp
-    - aws-sdk-cpp-core
-    - aws-sdk-cpp-ec2
-    - aws-sdk-cpp-firehose
-    - aws-sdk-cpp-iam
-    - aws-sdk-cpp-kinesis
-    - aws-sdk-cpp-s3
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -25,43 +12,55 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 1.11.555-1
+    version: 1.11.565-1
     packages:
-      - aws-sdk-cpp-1.11.555-1-x86_64.pkg.tar.zst
-      - aws-sdk-cpp-core-1.11.555-1-x86_64.pkg.tar.zst
-      - aws-sdk-cpp-ec2-1.11.555-1-x86_64.pkg.tar.zst
-      - aws-sdk-cpp-firehose-1.11.555-1-x86_64.pkg.tar.zst
-      - aws-sdk-cpp-iam-1.11.555-1-x86_64.pkg.tar.zst
-      - aws-sdk-cpp-kinesis-1.11.555-1-x86_64.pkg.tar.zst
-      - aws-sdk-cpp-s3-1.11.555-1-x86_64.pkg.tar.zst
+      - aws-sdk-cpp-1.11.565-1-x86_64.pkg.tar.zst
+      - aws-sdk-cpp-core-1.11.565-1-x86_64.pkg.tar.zst
+      - aws-sdk-cpp-ec2-1.11.565-1-x86_64.pkg.tar.zst
+      - aws-sdk-cpp-firehose-1.11.565-1-x86_64.pkg.tar.zst
+      - aws-sdk-cpp-iam-1.11.565-1-x86_64.pkg.tar.zst
+      - aws-sdk-cpp-kinesis-1.11.565-1-x86_64.pkg.tar.zst
+      - aws-sdk-cpp-s3-1.11.565-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
